ToyRobot, Simulator Factory, IOOperator factory, Move, place and report operation added, Exception handling adding using controller advices
