# ToyRobot/src/main/java/com/idealo/toyrobot/factory/IOOperations/types/MoveOperation.java
@@ -1,0 +1,7 @@
+package com.idealo.toyrobot.factory.IOOperations.types;
+
+import com.idealo.toyrobot.factory.IOOperations.IOOperator;
+
+public class MoveOperation implements IOOperator{
+
+}
