# ToyRobot/src/main/java/com/idealo/toyrobot/factory/IOOperations/types/ReportOperation.java
@@ -1,0 +1,7 @@
+package com.idealo.toyrobot.factory.IOOperations.types;
+
+import com.idealo.toyrobot.factory.IOOperations.IOOperator;
+
+public class ReportOperation implements IOOperator{
+
+}
